# rust-sqlite-connection

./: .env  Cargo.toml  README.md
database/: data.db  data.db-shm  data.db-wal
migrations/: 20220704225008_users.sql
src/: database.rs  main.rs
