[package]
name = "rust-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate"
] }
dotenv = "0.15.0"
futures = "0.3.21"
include_dir = "0.7.2"
